# agent-job-market

./: .gitignore  Cargo.toml  README.md
docs/: CHAIN_C_DEPLOYMENT.md  COMMAND_CATALOG.md  SMOKE_CHECKLIST.md  TEST_STATUS.md
frontend/: index.html
indexer/: service.py
integration-tests/: Cargo.toml
integration-tests/tests/: spec_matrix_model_tests.rs
job-board-core/: Cargo.toml
job-board-core/abi/: job-board-core.abi.json
job-board-core/cli/: config.py  job_board_cli.py
job-board-core/meta/: Cargo.toml
job-board-core/meta/src/: main.rs
job-board-core/output/: job-board-core.abi.json  job-board-core.imports.json  job-board-core.mxsc.json  job-board-core.wasm
job-board-core/src/: lib.rs
job-board-core/wasm/: Cargo.toml
job-board-core/wasm/src/: lib.rs
shared-types/: Cargo.toml
shared-types/src/: lib.rs
test-mocks/bond-registry-mock/: Cargo.toml
test-mocks/bond-registry-mock/meta/: Cargo.toml
test-mocks/bond-registry-mock/src/: lib.rs
test-mocks/bond-registry-mock/wasm/: Cargo.toml
test-mocks/uptime-mock/: Cargo.toml
test-mocks/uptime-mock/meta/: Cargo.toml
test-mocks/uptime-mock/src/: lib.rs
test-mocks/uptime-mock/wasm/: Cargo.toml
work-escrow/: Cargo.toml
work-escrow/cli/: config.py  work_escrow_cli.py
work-escrow/meta/: Cargo.toml
work-escrow/meta/src/: main.rs
work-escrow/output/: work-escrow.abi.json  work-escrow.imports.json  work-escrow.mxsc.json  work-escrow.wasm
work-escrow/src/: job_board_proxy.rs  lib.rs
work-escrow/wasm/: Cargo.toml
work-escrow/wasm/src/: lib.rs
(+4 files in other folders)
