[workspace]
resolver = "2"
members = [
  "shared-types",
  "job-board-core",
  "job-board-core/meta",
  "work-escrow",
  "work-escrow/meta",
  "test-mocks/bond-registry-mock",
  "test-mocks/bond-registry-mock/meta",
  "test-mocks/uptime-mock",
  "test-mocks/uptime-mock/meta",
  "integration-tests",
]

[workspace.package]
edition = "2021"

[workspace.dependencies]
multiversx-sc = "0.54.0"
multiversx-sc-meta-lib = "0.54.0"
multiversx-sc-scenario = "0.54.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
